<resources>
    <string name="app_name">ActiveDiet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_message">We\'ve got just couple of questions. Please fill the form on the next page to calculate your BMR.</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Welcome to the Active Diet App!</string>
    <string name="workouts_link">Work Outs<a href="https://www.masterclass.com/articles/full-body-workout-plan#how-to-do-a-fullbody-workout"> </a></string>
    <string name="welcome">Welcome</string>
    <string name="calculate_bmr">Calculate BMR</string>
    <string name="weight">Weight</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD3JDRSAea-I2E2KRJmJb0GxIhTZJ55LB0</string>
    <string name="gender">Gender</string>
    <string name="kg">kg</string>
    <string name="years">years</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="activity">Activity</string>
    <string name="calculate">Calculate</string>
    <string name="goal">Goal</string>
    <string name="your_calculated_bmr">Your BMR is:</string>
    <string name="apply">Apply</string>
    <array name="genders">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </array>
    <array name="activity_level">
        <item>Select</item>
        <item>Little/No exercise</item>
        <item>Light exercise (1-3 days in week) </item>
        <item>Moderate exercise (3-5 days in week)</item>
        <item>Very active (6-7 days in week)</item>
        <item>Extra active (very active and physical job)</item>
    </array>
    <array name="goals">
        <item>Select</item>
        <item>I want to lose weight</item>
        <item>I want to keep weight</item>
        <item>I want to gain weight</item>
    </array>
    <string name="item_required">Required</string>
    <string name="kcal">kcal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="breakfast">Breakfast</string>
    <string name="second_breakfast">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="diner">Diner</string>
    <string name="supper">Supper</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="add_ingredient_dialog_title">Add Ingredient</string>
    <string name="calories">Calories</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_the_active_diet_app">Home Page</string>
    <string name="healthy_recipes">Healthy Recipes</string>
    <string name="workouts">workoutS</string>


    <string name="test_name">Running App</string>
    <string name="todo">TODO</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

</resources>