<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.food.DailyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/reminder"
            android:layout_width="90dp"
            android:layout_height="58dp"
            android:layout_marginTop="2dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="54dp"
            android:layout_height="55dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/alarm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/reminder"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="@+id/daily_next_day_btn"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/daily_previous_day_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_left_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/daily_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="03-09-2021"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/daily_next_day_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/daily_previous_day_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />

        <ImageView
            android:id="@+id/daily_next_day_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_right_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reminder"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/daily_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/meal_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <LinearLayout
            android:id="@+id/daily_totals_calories_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/daily_totals_proteins_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/daily_totals_kcal_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 kcal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daily_totals_proteins_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/daily_totals_fats_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/daily_totals_calories_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proteins"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/daily_totals_proteins_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 g" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daily_totals_fats_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/daily_totals_carbs_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/daily_totals_proteins_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fats"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/daily_totals_fats_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 g" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daily_totals_carbs_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/daily_totals_fats_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/daily_totals_carbs_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 g" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/back_to_menu"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Menu"
        android:textColor="#4A148C" />

</LinearLayout>